# point_labeler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  package.xml
assets/: labels.xml  settings.cfg
scripts/: .gitignore  .style.yapf  io_utils.py  kitti_raw2odometry.py  laserscan.py  merge_labels.py  repair_labels.py
src/: CMakeLists.txt  MainFrame.ui  init_instances.cpp  labeler.cpp  labels.xml
src/data/: ColorGL.cpp  ColorGL.h  CoordinateSystems.h  Cylinder.h  Math.cpp  Math.h  Pointcloud.h  ProjectedPoint.h  QuadTree.cpp  QuadTree.h  ViewFrustum.cpp  ViewFrustum.h  draw_utils.cpp  draw_utils.h  geometry.h  kitti_utils.cpp  kitti_utils.h  label_utils.cpp  label_utils.h  misc.cpp  misc.h  transform.cpp  transform.h
src/rv/: Stopwatch.cpp  Stopwatch.h
src/shaders/: assign_instances.vert  average_heightmap.frag  build_instancemap.vert  color.glsl  compute_bbox.frag  compute_bbox.vert  draw_bbox.geom  draw_bbox.vert  draw_bbox_id.frag  draw_bbox_id.geom  draw_frustum.geom  draw_heightmap.geom  draw_heightmap.vert  draw_plane.geom  draw_points.frag  draw_points.vert  draw_polygon.vert  fill_tile_points.geom  fill_tile_points.vert  gen_heightmap.frag  gen_heightmap.vert  gen_instanceIdMap.vert  project_points.vert  quad.geom  selected_labels.geom  selected_labels.vert  update_labels.vert  update_visibility.vert
src/test/: CMakeLists.txt  triangulateTest.cpp
src/widget/: CADCamera.cpp  CADCamera.h  CameraGL.cpp  CameraGL.h  ImageViewer.cpp  ImageViewer.h  KittiReader.cpp  KittiReader.h  LabelButton.cpp  LabelButton.h  Mainframe.cpp  Mainframe.h  TileSelectorWidget.cpp  TileSelectorWidget.h  Viewport.cpp  Viewport.h  common.h  waitingspinnerwidget.cpp  waitingspinnerwidget.h
